methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: ':' expected but ';' found.
def move(stepCount; Int, avant : Boolean){
                  ^MethodsArgs:2: error: ';' expected but ',' found.
def move(stepCount; Int, avant : Boolean){
                       ^